Actividad Evaluable 04-FINAL UD03

--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
         <tr th:each="location : ${listLocations}">
-            <td th:text="${location.id}"></th>
+            <td th:text="${location.id}"></td>
             <td th:text="${location.address}"></td>
             <td th:text="${location.city}"></td>
             <td th:text="${location.supermarket.name}"></td>
