--- a/src/main/resources/templates/province.html
+++ b/src/main/resources/templates/province.html
@@ -25,7 +25,7 @@
             <th th:text="#{msg.province.id}"></th>
             <th th:text="#{msg.province.code}"></th>
             <th th:text="#{msg.province.name}"></th>
-            <th th:text="#{msg.province.id_region}"></th>
+            <th th:text="#{msg.province.region_id}"></th>
             <th th:text="#{msg.province.actions}"></th>
         </tr>
         </thead>
