--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,11 @@
           <li class="nav-item">
             <a class="nav-link" href="#" th:href="@{/categories}">Categorias</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" th:href="@{/categories}">Categorias</a>
+          </li> <li class="nav-item">
+          <a class="nav-link" href="#" th:href="@{/tickets}">Lista de Tickets</a>
+        </li>
         </ul>
         <form th:action="@{/}" method="get" class="d-flex form-inline">
           <select name="lang" onchange="this.form.submit()" class="form-select">
