--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,7 @@
 <!-- header.html -->
-<header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+<header th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -27,11 +29,15 @@
           <li class="nav-item">
             <a class="nav-link" href="#" th:href="@{/categories}">Categorias</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" th:href="@{/categories}">Categorias</a>
-          </li> <li class="nav-item">
+          <li>
           <a class="nav-link" href="#" th:href="@{/tickets}">Lista de Tickets</a>
         </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <span class="navbar-text me-3" >Bienvenido, </span><span
+                  sec:authentication="name" style="color: white; margin-right: 20px;"></span>
+          </li>
         </ul>
         <form th:action="@{/}" method="get" class="d-flex form-inline">
           <select name="lang" onchange="this.form.submit()" class="form-select">
@@ -39,6 +45,23 @@
             <option value="en" th:selected="${#locale.language == 'en'}">English</option>
           </select>
         </form>
+
+        <!-- Botones de Login y Logout -->
+        <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+          <!-- Mostrar enlace de login si el usuario no está autenticado -->
+          <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="nav-link" th:href="@{/login}">Login</a>
+          </li>
+          <!-- Mostrar enlace de logout si el usuario está autenticado -->
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" th:href="@{/logout}"
+               onclick="event.preventDefault();document.getElementById('logout-form').submit();">
+              Logout
+            </a>
+            <form id="logout-form" th:action="@{/logout}" method="post"
+                  style="display: none;"></form>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
